[project]
name = "finalproject-gubarev-dpo"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Gubarev",email = "dengubareff@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
     { include = "valutatrade_hub" },
 ]

[tool.poetry.scripts]
project = "main:main"
[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)",
    "prettytable (>=3.16.0,<4.0.0)"
]
