[project]
name = "finalproject-gubarev-dpo"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Gubarev",email = "dengubareff@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "prettytable (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
     { include = "valutatrade_hub" },
 ]

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[dependency-groups]
dev = [
    "ruff (>=0.14.1,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I", "B", "B904", "C901"]  # Выберите нужные правила
ignore = []  # Начните с пустого списка и добавляйте исключения, если нужно
